Change tabs to show better on tablets. Removed old tabs css to avoid confusion.

--- a/stylesheets/_horizontal-tabs.scss
+++ b/stylesheets/_horizontal-tabs.scss
@@ -12,7 +12,7 @@
     list-style: none;
     margin: 0;
 
-    @include media('>tablet') {
+    @include media($gt-big-phone) {
       border-top: 0 none;
     }
 
@@ -21,7 +21,7 @@
       font-size: em(19);
       margin: 0;
 
-      @include media('>tablet') {
+      @include media($gt-big-phone) {
         border-bottom: 0 none;
         float: left;
         margin: 0 0 -1px;
@@ -38,7 +38,7 @@
           outline: 3px;
         }
 
-        @include media('>tablet') {
+        @include media($gt-big-phone) {
           background-color: $grey-3;
           border: 0 none;
           float: left;
@@ -56,7 +56,7 @@
         cursor: default;
         text-decoration: none;
 
-        @include media('>tablet') {
+        @include media($gt-big-phone) {
           border: 1px solid $grey-2;
           border-bottom: 1px solid transparent;
           margin-bottom: 0;
@@ -73,7 +73,7 @@
   .tabs-content {
     clear: both;
 
-    @include media('>tablet') {
+    @include media($gt-big-phone) {
       border-top: 1px solid $grey-2;
     }
 
